新增安全认证功能，包含管理员密码验证和Bearer认证机制。创建config.py文件以管理密码配置，更新main.py以集成新认证逻辑，并在前端实现管理员登录界面。更新README文档以反映新的认证流程和安全配置。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - PYTHONUNBUFFERED=1
       - HOST=0.0.0.0
       - PORT=8000
+      # 安全配置（生产环境中请修改这些值）
+      - ADMIN_PASSWORD=admin123
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/api')"]
