--- a/docker.env.example
+++ b/docker.env.example
@@ -35,6 +35,13 @@ LOG_LEVEL=INFO
 DEBUG=false
 
 # =============================================================================
+# 安全认证配置
+# =============================================================================
+
+# 管理员密码（可以使用明文或bcrypt哈希值）
+ADMIN_PASSWORD=admin123
+
+# =============================================================================
 # IMAP配置（已内置，通常无需修改）
 # =============================================================================
 
