--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ fastapi[all]==0.104.1
 httpx==0.25.2
 aioimaplib==2.0.1
 pydantic[email]==2.5.0
-requests==2.31.0 
+requests==2.31.0
+passlib[bcrypt]==1.7.4 
