修复Docker部署中的权限问题，调整容器用户为root以解决accounts.json文件权限错误，并更新相关文档以反映这些更改。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   outlook-email-client:
     build: .
     container_name: outlook-email-api
+    # 使用root用户运行容器，解决权限问题
+    user: root
     ports:
       - "8000:8000"
     volumes:
       # 数据持久化 - 保存用户账户信息
       - ./data:/app/data
-      # 可选：如果需要自定义配置文件
+      # 账户信息持久化
       - ./accounts.json:/app/accounts.json
     environment:
       # 可以通过环境变量覆盖默认配置
